cmake_minimum_required(VERSION 3.22)
project(wpa_supplicant_2_9_standard)

set(CMAKE_CXX_STANDARD 14)

include_directories(build/include)
include_directories(hostapd)
include_directories(hs20/client)
include_directories(src/ap)
include_directories(src/common)
include_directories(src/crypto)
include_directories(src/drivers)
include_directories(src/eap_common)
include_directories(src/eap_peer)
include_directories(src/eap_server)
include_directories(src/eapol_auth)
include_directories(src/eapol_supp)
include_directories(src/fst)
include_directories(src/l2_packet)
include_directories(src/p2p)
include_directories(src/pae)
include_directories(src/radius)
include_directories(src/rsn_supp)
include_directories(src/tls)
include_directories(src/utils)
include_directories(src/wps)
include_directories(wpa_supplicant)
include_directories(wpa_supplicant/binder)
include_directories(wpa_supplicant/dbus)
include_directories(wpa_supplicant/wpa_gui-qt4)
include_directories(wpa_supplicant_lib)
include_directories(wpa_test)
include_directories(../../../drivers/peripheral/wlan/client)
include_directories(../../libnl/include)

add_executable(wpa_supplicant_2_9_standard
        build/include/libwpa.h
        build/Makefile
        hostapd/logwatch/hostapd
        hostapd/logwatch/hostapd.conf
        hostapd/logwatch/README
        hostapd/.config
        hostapd/android.config
        hostapd/Android.mk
        hostapd/ap_config_file.c
        hostapd/ap_ctrl_iface.c
        hostapd/ap_eap_register.c
        hostapd/ap_main.c
        hostapd/ChangeLog
        hostapd/config_file.h
        hostapd/ctrl_iface.h
        hostapd/defconfig
        hostapd/eap_register.h
        hostapd/eap_testing.txt
        hostapd/hapd_module_tests.c
        hostapd/hlr_auc_gw.c
        hostapd/hlr_auc_gw.milenage_db
        hostapd/hlr_auc_gw.txt
        hostapd/hostapd.8
        hostapd/hostapd.accept
        hostapd/hostapd.android.rc
        hostapd/hostapd.conf
        hostapd/hostapd.deny
        hostapd/hostapd.eap_user
        hostapd/hostapd.eap_user_sqlite
        hostapd/hostapd.radius_clients
        hostapd/hostapd.sim_db
        hostapd/hostapd.vlan
        hostapd/hostapd.wpa_psk
        hostapd/hostapd_cli.1
        hostapd/hostapd_cli.c
        hostapd/Makefile
        hostapd/nt_password_hash.c
        hostapd/README
        hostapd/README-MULTI-AP
        hostapd/README-WPS
        hostapd/README.OpenSource
        hostapd/sae_pk_gen.c
        hostapd/wired.conf
        hostapd/wps-ap-nfc.py
        hostapd_test/hostapd_sample.c
        hs20/client/.gitignore
        hs20/client/Android.mk
        hs20/client/devdetail.xml
        hs20/client/devinfo.xml
        hs20/client/est.c
        hs20/client/Makefile
        hs20/client/oma_dm_client.c
        hs20/client/osu_client.c
        hs20/client/osu_client.h
        hs20/client/spp_client.c
        src/ap/accounting.c
        src/ap/accounting.h
        src/ap/acs.c
        src/ap/acs.h
        src/ap/airtime_policy.c
        src/ap/airtime_policy.h
        src/ap/ap_config.c
        src/ap/ap_config.h
        src/ap/ap_drv_ops.c
        src/ap/ap_drv_ops.h
        src/ap/ap_list.c
        src/ap/ap_list.h
        src/ap/ap_mlme.c
        src/ap/ap_mlme.h
        src/ap/ap_rrm.c
        src/ap/authsrv.c
        src/ap/authsrv.h
        src/ap/beacon.c
        src/ap/beacon.h
        src/ap/bss_load.c
        src/ap/bss_load.h
        src/ap/ctrl_iface_ap.c
        src/ap/ctrl_iface_ap.h
        src/ap/dfs.c
        src/ap/dfs.h
        src/ap/dhcp_snoop.c
        src/ap/dhcp_snoop.h
        src/ap/dpp_hostapd.c
        src/ap/dpp_hostapd.h
        src/ap/drv_callbacks.c
        src/ap/eap_user_db.c
        src/ap/eth_p_oui.c
        src/ap/eth_p_oui.h
        src/ap/fils_hlp.c
        src/ap/fils_hlp.h
        src/ap/gas_query_ap.c
        src/ap/gas_query_ap.h
        src/ap/gas_serv.c
        src/ap/gas_serv.h
        src/ap/hostapd.c
        src/ap/hostapd.h
        src/ap/hs20.c
        src/ap/hs20.h
        src/ap/hw_features.c
        src/ap/hw_features.h
        src/ap/ieee802_11.c
        src/ap/ieee802_11.h
        src/ap/ieee802_11_auth.c
        src/ap/ieee802_11_auth.h
        src/ap/ieee802_11_he.c
        src/ap/ieee802_11_ht.c
        src/ap/ieee802_11_shared.c
        src/ap/ieee802_11_vht.c
        src/ap/ieee802_1x.c
        src/ap/ieee802_1x.h
        src/ap/Makefile
        src/ap/mbo_ap.c
        src/ap/mbo_ap.h
        src/ap/ndisc_snoop.c
        src/ap/ndisc_snoop.h
        src/ap/neighbor_db.c
        src/ap/neighbor_db.h
        src/ap/p2p_hostapd.c
        src/ap/p2p_hostapd.h
        src/ap/pmksa_cache_auth.c
        src/ap/pmksa_cache_auth.h
        src/ap/preauth_auth.c
        src/ap/preauth_auth.h
        src/ap/rrm.c
        src/ap/rrm.h
        src/ap/sta_info.c
        src/ap/sta_info.h
        src/ap/taxonomy.c
        src/ap/taxonomy.h
        src/ap/tkip_countermeasures.c
        src/ap/tkip_countermeasures.h
        src/ap/utils.c
        src/ap/vlan.c
        src/ap/vlan.h
        src/ap/vlan_full.c
        src/ap/vlan_ifconfig.c
        src/ap/vlan_init.c
        src/ap/vlan_init.h
        src/ap/vlan_ioctl.c
        src/ap/vlan_util.c
        src/ap/vlan_util.h
        src/ap/wmm.c
        src/ap/wmm.h
        src/ap/wnm_ap.c
        src/ap/wnm_ap.h
        src/ap/wpa_auth.c
        src/ap/wpa_auth.h
        src/ap/wpa_auth_ft.c
        src/ap/wpa_auth_glue.c
        src/ap/wpa_auth_glue.h
        src/ap/wpa_auth_i.h
        src/ap/wpa_auth_ie.c
        src/ap/wpa_auth_ie.h
        src/ap/wpa_auth_kay.c
        src/ap/wpa_auth_kay.h
        src/ap/wps_hostapd.c
        src/ap/wps_hostapd.h
        src/ap/x_snoop.c
        src/ap/x_snoop.h
        src/common/brcm_vendor.h
        src/common/cli.c
        src/common/cli.h
        src/common/common_module_tests.c
        src/common/ctrl_iface_common.c
        src/common/ctrl_iface_common.h
        src/common/defs.h
        src/common/dhcp.h
        src/common/dpp.c
        src/common/dpp.h
        src/common/dpp_auth.c
        src/common/dpp_backup.c
        src/common/dpp_crypto.c
        src/common/dpp_i.h
        src/common/dpp_pkex.c
        src/common/dpp_reconfig.c
        src/common/dpp_tcp.c
        src/common/dragonfly.c
        src/common/dragonfly.h
        src/common/eapol_common.h
        src/common/gas.c
        src/common/gas.h
        src/common/gas_server.c
        src/common/gas_server.h
        src/common/hw_features_common.c
        src/common/hw_features_common.h
        src/common/ieee802_11_common.c
        src/common/ieee802_11_common.h
        src/common/ieee802_11_defs.h
        src/common/ieee802_1x_defs.h
        src/common/linux_bridge.h
        src/common/linux_vlan.h
        src/common/Makefile
        src/common/ocv.c
        src/common/ocv.h
        src/common/privsep_commands.h
        src/common/ptksa_cache.c
        src/common/ptksa_cache.h
        src/common/qca-vendor-attr.h
        src/common/qca-vendor.h
        src/common/sae.c
        src/common/sae.h
        src/common/sae_pk.c
        src/common/tnc.h
        src/common/version.h
        src/common/wpa_common.c
        src/common/wpa_common.h
        src/common/wpa_ctrl.c
        src/common/wpa_ctrl.h
        src/common/wpa_helpers.c
        src/common/wpa_helpers.h
        src/crypto/aes-cbc.c
        src/crypto/aes-ccm.c
        src/crypto/aes-ctr.c
        src/crypto/aes-eax.c
        src/crypto/aes-encblock.c
        src/crypto/aes-gcm.c
        src/crypto/aes-internal-dec.c
        src/crypto/aes-internal-enc.c
        src/crypto/aes-internal.c
        src/crypto/aes-omac1.c
        src/crypto/aes-siv.c
        src/crypto/aes-unwrap.c
        src/crypto/aes-wrap.c
        src/crypto/aes.h
        src/crypto/aes_i.h
        src/crypto/aes_siv.h
        src/crypto/aes_wrap.h
        src/crypto/crypto.h
        src/crypto/crypto_gnutls.c
        src/crypto/crypto_internal-cipher.c
        src/crypto/crypto_internal-modexp.c
        src/crypto/crypto_internal-rsa.c
        src/crypto/crypto_internal.c
        src/crypto/crypto_libtomcrypt.c
        src/crypto/crypto_linux.c
        src/crypto/crypto_module_tests.c
        src/crypto/crypto_nettle.c
        src/crypto/crypto_none.c
        src/crypto/crypto_openssl.c
        src/crypto/crypto_wolfssl.c
        src/crypto/des-internal.c
        src/crypto/des_i.h
        src/crypto/dh_group5.c
        src/crypto/dh_group5.h
        src/crypto/dh_groups.c
        src/crypto/dh_groups.h
        src/crypto/fips_prf_internal.c
        src/crypto/fips_prf_openssl.c
        src/crypto/fips_prf_wolfssl.c
        src/crypto/Makefile
        src/crypto/md4-internal.c
        src/crypto/md5-internal.c
        src/crypto/md5.c
        src/crypto/md5.h
        src/crypto/md5_i.h
        src/crypto/milenage.c
        src/crypto/milenage.h
        src/crypto/ms_funcs.c
        src/crypto/ms_funcs.h
        src/crypto/random.c
        src/crypto/random.h
        src/crypto/rc4.c
        src/crypto/sha1-internal.c
        src/crypto/sha1-pbkdf2.c
        src/crypto/sha1-prf.c
        src/crypto/sha1-tlsprf.c
        src/crypto/sha1-tprf.c
        src/crypto/sha1.c
        src/crypto/sha1.h
        src/crypto/sha1_i.h
        src/crypto/sha256-internal.c
        src/crypto/sha256-kdf.c
        src/crypto/sha256-prf.c
        src/crypto/sha256-tlsprf.c
        src/crypto/sha256.c
        src/crypto/sha256.h
        src/crypto/sha256_i.h
        src/crypto/sha384-internal.c
        src/crypto/sha384-kdf.c
        src/crypto/sha384-prf.c
        src/crypto/sha384-tlsprf.c
        src/crypto/sha384.c
        src/crypto/sha384.h
        src/crypto/sha384_i.h
        src/crypto/sha512-internal.c
        src/crypto/sha512-kdf.c
        src/crypto/sha512-prf.c
        src/crypto/sha512.c
        src/crypto/sha512.h
        src/crypto/sha512_i.h
        src/crypto/tls.h
        src/crypto/tls_gnutls.c
        src/crypto/tls_internal.c
        src/crypto/tls_none.c
        src/crypto/tls_openssl.c
        src/crypto/tls_openssl.h
        src/crypto/tls_openssl_ocsp.c
        src/crypto/tls_wolfssl.c
        src/drivers/android_drv.h
        src/drivers/driver.h
        src/drivers/driver_atheros.c
        src/drivers/driver_bsd.c
        src/drivers/driver_common.c
        src/drivers/driver_hostap.c
        src/drivers/driver_hostap.h
        src/drivers/driver_macsec_linux.c
        src/drivers/driver_macsec_qca.c
        src/drivers/driver_ndis.c
        src/drivers/driver_ndis.h
        src/drivers/driver_ndis_.c
        src/drivers/driver_nl80211.c
        src/drivers/driver_nl80211.h
        src/drivers/driver_nl80211_android.c
        src/drivers/driver_nl80211_capa.c
        src/drivers/driver_nl80211_event.c
        src/drivers/driver_nl80211_monitor.c
        src/drivers/driver_nl80211_scan.c
        src/drivers/driver_none.c
        src/drivers/driver_openbsd.c
        src/drivers/driver_privsep.c
        src/drivers/driver_roboswitch.c
        src/drivers/driver_wext.c
        src/drivers/driver_wext.h
        src/drivers/driver_wired.c
        src/drivers/driver_wired_common.c
        src/drivers/driver_wired_common.h
        src/drivers/drivers.c
        src/drivers/drivers.mak
        src/drivers/drivers.mk
        src/drivers/linux_defines.h
        src/drivers/linux_ioctl.c
        src/drivers/linux_ioctl.h
        src/drivers/linux_wext.h
        src/drivers/Makefile
        src/drivers/ndis_events.c
        src/drivers/netlink.c
        src/drivers/netlink.h
        src/drivers/nl80211_copy.h
        src/drivers/priv_netlink.h
        src/drivers/rfkill.c
        src/drivers/rfkill.h
        src/drivers/wpa_hal.c
        src/drivers/wpa_hal.h
        src/drivers/wpa_hal_event.c
        src/eap_common/chap.c
        src/eap_common/chap.h
        src/eap_common/eap_common.c
        src/eap_common/eap_common.h
        src/eap_common/eap_defs.h
        src/eap_common/eap_eke_common.c
        src/eap_common/eap_eke_common.h
        src/eap_common/eap_fast_common.c
        src/eap_common/eap_fast_common.h
        src/eap_common/eap_gpsk_common.c
        src/eap_common/eap_gpsk_common.h
        src/eap_common/eap_ikev2_common.c
        src/eap_common/eap_ikev2_common.h
        src/eap_common/eap_pax_common.c
        src/eap_common/eap_pax_common.h
        src/eap_common/eap_peap_common.c
        src/eap_common/eap_peap_common.h
        src/eap_common/eap_psk_common.c
        src/eap_common/eap_psk_common.h
        src/eap_common/eap_pwd_common.c
        src/eap_common/eap_pwd_common.h
        src/eap_common/eap_sake_common.c
        src/eap_common/eap_sake_common.h
        src/eap_common/eap_sim_common.c
        src/eap_common/eap_sim_common.h
        src/eap_common/eap_teap_common.c
        src/eap_common/eap_teap_common.h
        src/eap_common/eap_tlv_common.h
        src/eap_common/eap_ttls.h
        src/eap_common/eap_wsc_common.c
        src/eap_common/eap_wsc_common.h
        src/eap_common/ikev2_common.c
        src/eap_common/ikev2_common.h
        src/eap_common/Makefile
        src/eap_peer/.gitignore
        src/eap_peer/eap.c
        src/eap_peer/eap.h
        src/eap_peer/eap_aka.c
        src/eap_peer/eap_config.h
        src/eap_peer/eap_eke.c
        src/eap_peer/eap_fast.c
        src/eap_peer/eap_fast_pac.c
        src/eap_peer/eap_fast_pac.h
        src/eap_peer/eap_gpsk.c
        src/eap_peer/eap_gtc.c
        src/eap_peer/eap_i.h
        src/eap_peer/eap_ikev2.c
        src/eap_peer/eap_leap.c
        src/eap_peer/eap_md5.c
        src/eap_peer/eap_methods.c
        src/eap_peer/eap_methods.h
        src/eap_peer/eap_mschapv2.c
        src/eap_peer/eap_otp.c
        src/eap_peer/eap_pax.c
        src/eap_peer/eap_peap.c
        src/eap_peer/eap_proxy.h
        src/eap_peer/eap_proxy_dummy.c
        src/eap_peer/eap_psk.c
        src/eap_peer/eap_pwd.c
        src/eap_peer/eap_sake.c
        src/eap_peer/eap_sim.c
        src/eap_peer/eap_teap.c
        src/eap_peer/eap_teap_pac.c
        src/eap_peer/eap_teap_pac.h
        src/eap_peer/eap_tls.c
        src/eap_peer/eap_tls_common.c
        src/eap_peer/eap_tls_common.h
        src/eap_peer/eap_tnc.c
        src/eap_peer/eap_ttls.c
        src/eap_peer/eap_vendor_test.c
        src/eap_peer/eap_wsc.c
        src/eap_peer/ikev2.c
        src/eap_peer/ikev2.h
        src/eap_peer/Makefile
        src/eap_peer/mschapv2.c
        src/eap_peer/mschapv2.h
        src/eap_peer/tncc.c
        src/eap_peer/tncc.h
        src/eap_server/eap.h
        src/eap_server/eap_i.h
        src/eap_server/eap_methods.h
        src/eap_server/eap_server.c
        src/eap_server/eap_server_aka.c
        src/eap_server/eap_server_eke.c
        src/eap_server/eap_server_fast.c
        src/eap_server/eap_server_gpsk.c
        src/eap_server/eap_server_gtc.c
        src/eap_server/eap_server_identity.c
        src/eap_server/eap_server_ikev2.c
        src/eap_server/eap_server_md5.c
        src/eap_server/eap_server_methods.c
        src/eap_server/eap_server_mschapv2.c
        src/eap_server/eap_server_pax.c
        src/eap_server/eap_server_peap.c
        src/eap_server/eap_server_psk.c
        src/eap_server/eap_server_pwd.c
        src/eap_server/eap_server_sake.c
        src/eap_server/eap_server_sim.c
        src/eap_server/eap_server_teap.c
        src/eap_server/eap_server_tls.c
        src/eap_server/eap_server_tls_common.c
        src/eap_server/eap_server_tnc.c
        src/eap_server/eap_server_ttls.c
        src/eap_server/eap_server_vendor_test.c
        src/eap_server/eap_server_wsc.c
        src/eap_server/eap_sim_db.c
        src/eap_server/eap_sim_db.h
        src/eap_server/eap_tls_common.h
        src/eap_server/ikev2.c
        src/eap_server/ikev2.h
        src/eap_server/Makefile
        src/eap_server/tncs.c
        src/eap_server/tncs.h
        src/eapol_auth/eapol_auth_dump.c
        src/eapol_auth/eapol_auth_sm.c
        src/eapol_auth/eapol_auth_sm.h
        src/eapol_auth/eapol_auth_sm_i.h
        src/eapol_auth/Makefile
        src/eapol_supp/eapol_supp_sm.c
        src/eapol_supp/eapol_supp_sm.h
        src/eapol_supp/Makefile
        src/fst/fst.c
        src/fst/fst.h
        src/fst/fst_ctrl_aux.c
        src/fst/fst_ctrl_aux.h
        src/fst/fst_ctrl_defs.h
        src/fst/fst_ctrl_iface.c
        src/fst/fst_ctrl_iface.h
        src/fst/fst_defs.h
        src/fst/fst_group.c
        src/fst/fst_group.h
        src/fst/fst_iface.c
        src/fst/fst_iface.h
        src/fst/fst_internal.h
        src/fst/fst_session.c
        src/fst/fst_session.h
        src/fst/Makefile
        src/l2_packet/l2_packet.h
        src/l2_packet/l2_packet_freebsd.c
        src/l2_packet/l2_packet_linux.c
        src/l2_packet/l2_packet_ndis.c
        src/l2_packet/l2_packet_none.c
        src/l2_packet/l2_packet_pcap.c
        src/l2_packet/l2_packet_privsep.c
        src/l2_packet/l2_packet_rtos.c
        src/l2_packet/l2_packet_winpcap.c
        src/l2_packet/Makefile
        src/p2p/Makefile
        src/p2p/p2p.c
        src/p2p/p2p.h
        src/p2p/p2p_build.c
        src/p2p/p2p_dev_disc.c
        src/p2p/p2p_go_neg.c
        src/p2p/p2p_group.c
        src/p2p/p2p_i.h
        src/p2p/p2p_invitation.c
        src/p2p/p2p_parse.c
        src/p2p/p2p_pd.c
        src/p2p/p2p_sd.c
        src/p2p/p2p_utils.c
        src/pae/ieee802_1x_cp.c
        src/pae/ieee802_1x_cp.h
        src/pae/ieee802_1x_kay.c
        src/pae/ieee802_1x_kay.h
        src/pae/ieee802_1x_kay_i.h
        src/pae/ieee802_1x_key.c
        src/pae/ieee802_1x_key.h
        src/pae/ieee802_1x_secy_ops.c
        src/pae/ieee802_1x_secy_ops.h
        src/pae/Makefile
        src/radius/Makefile
        src/radius/radius.c
        src/radius/radius.h
        src/radius/radius_client.c
        src/radius/radius_client.h
        src/radius/radius_das.c
        src/radius/radius_das.h
        src/radius/radius_server.c
        src/radius/radius_server.h
        src/rsn_supp/Makefile
        src/rsn_supp/pmksa_cache.c
        src/rsn_supp/pmksa_cache.h
        src/rsn_supp/preauth.c
        src/rsn_supp/preauth.h
        src/rsn_supp/tdls.c
        src/rsn_supp/wpa.c
        src/rsn_supp/wpa.h
        src/rsn_supp/wpa_ft.c
        src/rsn_supp/wpa_i.h
        src/rsn_supp/wpa_ie.c
        src/rsn_supp/wpa_ie.h
        src/tls/asn1.c
        src/tls/asn1.h
        src/tls/bignum.c
        src/tls/bignum.h
        src/tls/libtommath.c
        src/tls/Makefile
        src/tls/pkcs1.c
        src/tls/pkcs1.h
        src/tls/pkcs5.c
        src/tls/pkcs5.h
        src/tls/pkcs8.c
        src/tls/pkcs8.h
        src/tls/rsa.c
        src/tls/rsa.h
        src/tls/tlsv1_client.c
        src/tls/tlsv1_client.h
        src/tls/tlsv1_client_i.h
        src/tls/tlsv1_client_ocsp.c
        src/tls/tlsv1_client_read.c
        src/tls/tlsv1_client_write.c
        src/tls/tlsv1_common.c
        src/tls/tlsv1_common.h
        src/tls/tlsv1_cred.c
        src/tls/tlsv1_cred.h
        src/tls/tlsv1_record.c
        src/tls/tlsv1_record.h
        src/tls/tlsv1_server.c
        src/tls/tlsv1_server.h
        src/tls/tlsv1_server_i.h
        src/tls/tlsv1_server_read.c
        src/tls/tlsv1_server_write.c
        src/tls/x509v3.c
        src/tls/x509v3.h
        src/utils/base64.c
        src/utils/base64.h
        src/utils/bitfield.c
        src/utils/bitfield.h
        src/utils/browser-android.c
        src/utils/browser-system.c
        src/utils/browser-wpadebug.c
        src/utils/browser.c
        src/utils/browser.h
        src/utils/build_config.h
        src/utils/common.c
        src/utils/common.h
        src/utils/config.c
        src/utils/config.h
        src/utils/const_time.h
        src/utils/crc32.c
        src/utils/crc32.h
        src/utils/edit.c
        src/utils/edit.h
        src/utils/edit_readline.c
        src/utils/edit_simple.c
        src/utils/eloop.c
        src/utils/eloop.h
        src/utils/eloop_win.c
        src/utils/ext_password.c
        src/utils/ext_password.h
        src/utils/ext_password_file.c
        src/utils/ext_password_i.h
        src/utils/ext_password_test.c
        src/utils/http-utils.h
        src/utils/http_curl.c
        src/utils/includes.h
        src/utils/ip_addr.c
        src/utils/ip_addr.h
        src/utils/json.c
        src/utils/json.h
        src/utils/list.h
        src/utils/Makefile
        src/utils/module_tests.h
        src/utils/os.h
        src/utils/os_internal.c
        src/utils/os_none.c
        src/utils/os_unix.c
        src/utils/os_win32.c
        src/utils/pcsc_funcs.c
        src/utils/pcsc_funcs.h
        src/utils/platform.h
        src/utils/radiotap.c
        src/utils/radiotap.h
        src/utils/radiotap_iter.h
        src/utils/state_machine.h
        src/utils/trace.c
        src/utils/trace.h
        src/utils/utils_module_tests.c
        src/utils/uuid.c
        src/utils/uuid.h
        src/utils/wpa_debug.c
        src/utils/wpa_debug.h
        src/utils/wpabuf.c
        src/utils/wpabuf.h
        src/utils/xml-utils.c
        src/utils/xml-utils.h
        src/utils/xml_libxml2.c
        src/wps/http.h
        src/wps/http_client.c
        src/wps/http_client.h
        src/wps/http_server.c
        src/wps/http_server.h
        src/wps/httpread.c
        src/wps/httpread.h
        src/wps/Makefile
        src/wps/ndef.c
        src/wps/upnp_xml.c
        src/wps/upnp_xml.h
        src/wps/wps.c
        src/wps/wps.h
        src/wps/wps_attr_build.c
        src/wps/wps_attr_parse.c
        src/wps/wps_attr_parse.h
        src/wps/wps_attr_process.c
        src/wps/wps_common.c
        src/wps/wps_defs.h
        src/wps/wps_dev_attr.c
        src/wps/wps_dev_attr.h
        src/wps/wps_enrollee.c
        src/wps/wps_er.c
        src/wps/wps_er.h
        src/wps/wps_er_ssdp.c
        src/wps/wps_i.h
        src/wps/wps_module_tests.c
        src/wps/wps_registrar.c
        src/wps/wps_upnp.c
        src/wps/wps_upnp.h
        src/wps/wps_upnp_ap.c
        src/wps/wps_upnp_event.c
        src/wps/wps_upnp_i.h
        src/wps/wps_upnp_ssdp.c
        src/wps/wps_upnp_web.c
        src/wps/wps_validate.c
        src/build.rules
        src/lib.rules
        src/Makefile
        src/objs.mk
        wpa_supplicant/binder/fi/w1/wpa_supplicant/IIface.aidl
        wpa_supplicant/binder/fi/w1/wpa_supplicant/ISupplicant.aidl
        wpa_supplicant/binder/fi/w1/wpa_supplicant/ISupplicantCallbacks.aidl
        wpa_supplicant/binder/.clang-format
        wpa_supplicant/binder/binder.cpp
        wpa_supplicant/binder/binder.h
        wpa_supplicant/binder/binder_constants.cpp
        wpa_supplicant/binder/binder_constants.h
        wpa_supplicant/binder/binder_i.h
        wpa_supplicant/binder/binder_manager.cpp
        wpa_supplicant/binder/binder_manager.h
        wpa_supplicant/binder/iface.cpp
        wpa_supplicant/binder/iface.h
        wpa_supplicant/binder/supplicant.cpp
        wpa_supplicant/binder/supplicant.h
        wpa_supplicant/dbus/.gitignore
        wpa_supplicant/dbus/dbus-wpa_supplicant.conf
        wpa_supplicant/dbus/dbus_common.c
        wpa_supplicant/dbus/dbus_common.h
        wpa_supplicant/dbus/dbus_common_i.h
        wpa_supplicant/dbus/dbus_dict_helpers.c
        wpa_supplicant/dbus/dbus_dict_helpers.h
        wpa_supplicant/dbus/dbus_new.c
        wpa_supplicant/dbus/dbus_new.h
        wpa_supplicant/dbus/dbus_new_handlers.c
        wpa_supplicant/dbus/dbus_new_handlers.h
        wpa_supplicant/dbus/dbus_new_handlers_p2p.c
        wpa_supplicant/dbus/dbus_new_handlers_p2p.h
        wpa_supplicant/dbus/dbus_new_handlers_wps.c
        wpa_supplicant/dbus/dbus_new_helpers.c
        wpa_supplicant/dbus/dbus_new_helpers.h
        wpa_supplicant/dbus/dbus_new_introspect.c
        wpa_supplicant/dbus/fi.w1.wpa_supplicant1.service.in
        wpa_supplicant/dbus/Makefile
        wpa_supplicant/doc/docbook/.gitignore
        wpa_supplicant/doc/docbook/eapol_test.8
        wpa_supplicant/doc/docbook/eapol_test.sgml
        wpa_supplicant/doc/docbook/Makefile
        wpa_supplicant/doc/docbook/manpage.links
        wpa_supplicant/doc/docbook/manpage.refs
        wpa_supplicant/doc/docbook/wpa_background.8
        wpa_supplicant/doc/docbook/wpa_background.sgml
        wpa_supplicant/doc/docbook/wpa_cli.8
        wpa_supplicant/doc/docbook/wpa_cli.sgml
        wpa_supplicant/doc/docbook/wpa_gui.8
        wpa_supplicant/doc/docbook/wpa_gui.sgml
        wpa_supplicant/doc/docbook/wpa_passphrase.8
        wpa_supplicant/doc/docbook/wpa_passphrase.sgml
        wpa_supplicant/doc/docbook/wpa_priv.8
        wpa_supplicant/doc/docbook/wpa_priv.sgml
        wpa_supplicant/doc/docbook/wpa_supplicant.8
        wpa_supplicant/doc/docbook/wpa_supplicant.conf.5
        wpa_supplicant/doc/docbook/wpa_supplicant.conf.sgml
        wpa_supplicant/doc/docbook/wpa_supplicant.sgml
        wpa_supplicant/examples/p2p/p2p_connect.py
        wpa_supplicant/examples/p2p/p2p_disconnect.py
        wpa_supplicant/examples/p2p/p2p_find.py
        wpa_supplicant/examples/p2p/p2p_flush.py
        wpa_supplicant/examples/p2p/p2p_group_add.py
        wpa_supplicant/examples/p2p/p2p_invite.py
        wpa_supplicant/examples/p2p/p2p_listen.py
        wpa_supplicant/examples/p2p/p2p_stop_find.py
        wpa_supplicant/examples/60_wpa_supplicant
        wpa_supplicant/examples/dbus-listen-preq.py
        wpa_supplicant/examples/dpp-nfc.py
        wpa_supplicant/examples/dpp-qrcode.py
        wpa_supplicant/examples/ieee8021x.conf
        wpa_supplicant/examples/openCryptoki.conf
        wpa_supplicant/examples/p2p-action-udhcp.sh
        wpa_supplicant/examples/p2p-action.sh
        wpa_supplicant/examples/p2p-nfc.py
        wpa_supplicant/examples/plaintext.conf
        wpa_supplicant/examples/udhcpd-p2p.conf
        wpa_supplicant/examples/wep.conf
        wpa_supplicant/examples/wpa-psk-tkip.conf
        wpa_supplicant/examples/wpa2-eap-ccmp.conf
        wpa_supplicant/examples/wpas-dbus-new-getall.py
        wpa_supplicant/examples/wpas-dbus-new-signals.py
        wpa_supplicant/examples/wpas-dbus-new-wps.py
        wpa_supplicant/examples/wpas-dbus-new.py
        wpa_supplicant/examples/wps-ap-cli
        wpa_supplicant/examples/wps-nfc.py
        wpa_supplicant/systemd/wpa_supplicant-nl80211.service.arg.in
        wpa_supplicant/systemd/wpa_supplicant-wired.service.arg.in
        wpa_supplicant/systemd/wpa_supplicant.service.arg.in
        wpa_supplicant/systemd/wpa_supplicant.service.in
        wpa_supplicant/utils/log2pcap.py
        wpa_supplicant/vs2005/eapol_test/eapol_test.vcproj
        wpa_supplicant/vs2005/win_if_list/win_if_list.vcproj
        wpa_supplicant/vs2005/wpa_cli/wpa_cli.vcproj
        wpa_supplicant/vs2005/wpa_passphrase/wpa_passphrase.vcproj
        wpa_supplicant/vs2005/wpa_supplicant/wpa_supplicant.vcproj
        wpa_supplicant/vs2005/wpasvc/wpasvc.vcproj
        wpa_supplicant/vs2005/wpa_supplicant.sln
        wpa_supplicant/wpa_gui-qt4/icons/.gitignore
        wpa_supplicant/wpa_gui-qt4/icons/ap.svg
        wpa_supplicant/wpa_gui-qt4/icons/group.svg
        wpa_supplicant/wpa_gui-qt4/icons/invitation.svg
        wpa_supplicant/wpa_gui-qt4/icons/laptop.svg
        wpa_supplicant/wpa_gui-qt4/icons/Makefile
        wpa_supplicant/wpa_gui-qt4/icons/README
        wpa_supplicant/wpa_gui-qt4/icons/wpa_gui.svg
        wpa_supplicant/wpa_gui-qt4/lang/.gitignore
        wpa_supplicant/wpa_gui-qt4/lang/wpa_gui_de.ts
        wpa_supplicant/wpa_gui-qt4/.gitignore
        wpa_supplicant/wpa_gui-qt4/addinterface.cpp
        wpa_supplicant/wpa_gui-qt4/addinterface.h
        wpa_supplicant/wpa_gui-qt4/eventhistory.cpp
        wpa_supplicant/wpa_gui-qt4/eventhistory.h
        wpa_supplicant/wpa_gui-qt4/eventhistory.ui
        wpa_supplicant/wpa_gui-qt4/icons.qrc
        wpa_supplicant/wpa_gui-qt4/icons_png.qrc
        wpa_supplicant/wpa_gui-qt4/main.cpp
        wpa_supplicant/wpa_gui-qt4/networkconfig.cpp
        wpa_supplicant/wpa_gui-qt4/networkconfig.h
        wpa_supplicant/wpa_gui-qt4/networkconfig.ui
        wpa_supplicant/wpa_gui-qt4/peers.cpp
        wpa_supplicant/wpa_gui-qt4/peers.h
        wpa_supplicant/wpa_gui-qt4/peers.ui
        wpa_supplicant/wpa_gui-qt4/scanresults.cpp
        wpa_supplicant/wpa_gui-qt4/scanresults.h
        wpa_supplicant/wpa_gui-qt4/scanresults.ui
        wpa_supplicant/wpa_gui-qt4/scanresultsitem.cpp
        wpa_supplicant/wpa_gui-qt4/scanresultsitem.h
        wpa_supplicant/wpa_gui-qt4/signalbar.cpp
        wpa_supplicant/wpa_gui-qt4/signalbar.h
        wpa_supplicant/wpa_gui-qt4/stringquery.cpp
        wpa_supplicant/wpa_gui-qt4/stringquery.h
        wpa_supplicant/wpa_gui-qt4/userdatarequest.cpp
        wpa_supplicant/wpa_gui-qt4/userdatarequest.h
        wpa_supplicant/wpa_gui-qt4/userdatarequest.ui
        wpa_supplicant/wpa_gui-qt4/wpa_gui.desktop
        wpa_supplicant/wpa_gui-qt4/wpa_gui.pro
        wpa_supplicant/wpa_gui-qt4/wpagui.cpp
        wpa_supplicant/wpa_gui-qt4/wpagui.h
        wpa_supplicant/wpa_gui-qt4/wpagui.ui
        wpa_supplicant/wpa_gui-qt4/wpamsg.h
        wpa_supplicant/.config
        wpa_supplicant/.gitignore
        wpa_supplicant/android.config
        wpa_supplicant/Android.mk
        wpa_supplicant/ap.c
        wpa_supplicant/ap.h
        wpa_supplicant/autoscan.c
        wpa_supplicant/autoscan.h
        wpa_supplicant/autoscan_exponential.c
        wpa_supplicant/autoscan_periodic.c
        wpa_supplicant/bgscan.c
        wpa_supplicant/bgscan.h
        wpa_supplicant/bgscan_learn.c
        wpa_supplicant/bgscan_simple.c
        wpa_supplicant/bss.c
        wpa_supplicant/bss.h
        wpa_supplicant/bssid_ignore.c
        wpa_supplicant/bssid_ignore.h
        wpa_supplicant/ChangeLog
        wpa_supplicant/config.c
        wpa_supplicant/config.h
        wpa_supplicant/config_file.c
        wpa_supplicant/config_none.c
        wpa_supplicant/config_ssid.h
        wpa_supplicant/config_winreg.c
        wpa_supplicant/ctrl_iface.c
        wpa_supplicant/ctrl_iface.h
        wpa_supplicant/ctrl_iface_named_pipe.c
        wpa_supplicant/ctrl_iface_udp.c
        wpa_supplicant/ctrl_iface_unix.c
        wpa_supplicant/defconfig
        wpa_supplicant/dpp_supplicant.c
        wpa_supplicant/dpp_supplicant.h
        wpa_supplicant/driver_i.h
        wpa_supplicant/eap_proxy_dummy.mak
        wpa_supplicant/eap_proxy_dummy.mk
        wpa_supplicant/eap_register.c
        wpa_supplicant/eap_testing.txt
        wpa_supplicant/eapol_test.c
        wpa_supplicant/eapol_test.py
        wpa_supplicant/events.c
        wpa_supplicant/gas_query.c
        wpa_supplicant/gas_query.h
        wpa_supplicant/hs20_supplicant.c
        wpa_supplicant/hs20_supplicant.h
        wpa_supplicant/ibss_rsn.c
        wpa_supplicant/ibss_rsn.h
        wpa_supplicant/interworking.c
        wpa_supplicant/interworking.h
        wpa_supplicant/libwpa_test.c
        wpa_supplicant/main.c
        wpa_supplicant/main_none.c
        wpa_supplicant/main_winmain.c
        wpa_supplicant/main_winsvc.c
        wpa_supplicant/Makefile
        wpa_supplicant/mbo.c
        wpa_supplicant/mesh.c
        wpa_supplicant/mesh.h
        wpa_supplicant/mesh_mpm.c
        wpa_supplicant/mesh_mpm.h
        wpa_supplicant/mesh_rsn.c
        wpa_supplicant/mesh_rsn.h
        wpa_supplicant/nfc_pw_token.c
        wpa_supplicant/nmake.mak
        wpa_supplicant/notify.c
        wpa_supplicant/notify.h
        wpa_supplicant/offchannel.c
        wpa_supplicant/offchannel.h
        wpa_supplicant/op_classes.c
        wpa_supplicant/p2p_supplicant.c
        wpa_supplicant/p2p_supplicant.h
        wpa_supplicant/p2p_supplicant_sd.c
        wpa_supplicant/pasn_supplicant.c
        wpa_supplicant/preauth_test.c
        wpa_supplicant/README
        wpa_supplicant/README-DPP
        wpa_supplicant/README-HS20
        wpa_supplicant/README-P2P
        wpa_supplicant/README-Windows.txt
        wpa_supplicant/README-WPS
        wpa_supplicant/README.OpenSource
        wpa_supplicant/robust_av.c
        wpa_supplicant/rrm.c
        wpa_supplicant/scan.c
        wpa_supplicant/scan.h
        wpa_supplicant/sme.c
        wpa_supplicant/sme.h
        wpa_supplicant/todo.txt
        wpa_supplicant/twt.c
        wpa_supplicant/wifi_display.c
        wpa_supplicant/wifi_display.h
        wpa_supplicant/win_example.reg
        wpa_supplicant/win_if_list.c
        wpa_supplicant/wmm_ac.c
        wpa_supplicant/wmm_ac.h
        wpa_supplicant/wnm_sta.c
        wpa_supplicant/wnm_sta.h
        wpa_supplicant/wpa_cli.c
        wpa_supplicant/wpa_passphrase.c
        wpa_supplicant/wpa_priv.c
        wpa_supplicant/wpa_supplicant.c
        wpa_supplicant/wpa_supplicant.conf
        wpa_supplicant/wpa_supplicant_conf.mk
        wpa_supplicant/wpa_supplicant_conf.sh
        wpa_supplicant/wpa_supplicant_i.h
        wpa_supplicant/wpa_supplicant_template.conf
        wpa_supplicant/wpas_glue.c
        wpa_supplicant/wpas_glue.h
        wpa_supplicant/wpas_kay.c
        wpa_supplicant/wpas_kay.h
        wpa_supplicant/wpas_module_tests.c
        wpa_supplicant/wps_supplicant.c
        wpa_supplicant/wps_supplicant.h
        wpa_supplicant_lib/driver_nl80211_hisi.c
        wpa_supplicant_lib/driver_nl80211_hisi.h
        wpa_supplicant_lib/wpa_magiclink.c
        wpa_supplicant_lib/wpa_magiclink.h
        wpa_test/wpa_sample.c
        .gitignore
        BUILD.gn
        build.sh
        CONTRIBUTIONS
        COPYING
        ohos.build
        README)

ADD_COMPILE_DEFINITIONS(CONFIG_CTRL_IFACE CONFIG_CTRL_IFACE_UDP CONFIG_IEEE80211W CONFIG_NO_VLAN
        CONFIG_NO_RADIUS
        CONFIG_NO_RANDOM_POOL
        CONFIG_SHA256
        CONFIG_CRYPTO_INTERNAL
        CONFIG_INTERNAL_LIBTOMMATH
        CONFIG_INTERNAL_SHA384
        CONFIG_INTERNAL_SHA512
        CONFIG_CTRL_IFACE
        CONFIG_CTRL_IFACE_UDP
        CONFIG_IBSS_RSN
        IEEE8021X_EAPOL
        USERSPACE_CLIENT_SUPPORT
        CONFIG_BACKEND_FILE
        CONFIG_NO_CONFIG_WRITE
        CONFIG_NO_CONFIG_BLOBS
        CONFIG_NO_ACCOUNTING
        EAP_SERVER_IDENTITY
        CONFIG_IEEE80211N
        HOSTAPD
        NEED_AP_MLME
        CONFIG_WPS
        CONFIG_AP
        CONFIG_P2P
        EAP_WSC
        EAP_SERVER_WSC
        EAP_SERVER
        CONFIG_GAS
        CONFIG_OFFCHANNEL
        CONFIG_MAGICLINK
        CONFIG_DEBUG_FILE
        CONFIG_DRIVER_NL80211
        CONFIG_LIBNL32
        CONFIG_OPEN_HARMONY_PATCH
        CONFIG_OPEN_HARMONY_HUKS_TLS
        EAP_MSCHAPV2
        EAP_TLS
        EAP_PEAP
        EAP_TTLS
        EAP_SIM
        EAP_PWD
        CONFIG_SHA256
        CONFIG_ECC
        EAP_AKA
        EAP_AKA_PRIME
        EAP_TLS_OPENSSL
        CONFIG_WEP)
