# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  CONFIG_CTRL_IFACE = "unix"
  wpa_supplicant_vendor_ext = false
  wpa_supplicant_wapi = false
  wpa_supplicant_ieee80211be = true
  wpa_supplicant_miracast_sink_opt = false
}

WPA_ROOT_DIR = "//third_party/wpa_supplicant/wpa_supplicant-2.9_standard"

print("wpa_supplicant_vendor_ext =", wpa_supplicant_vendor_ext)
print("wpa_supplicant_wapi =", wpa_supplicant_wapi)
