# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//third_party/wpa_supplicant/wpa_supplicant-2.9_standard/wpa.gni")

wpa_open_ext_path = "$WPA_ROOT_DIR/src/vendor_ext"
wpa_vendor_ext_src_path = "$wpa_vendor_ext_path/src"
wpa_vendor_ext_src_cli_path = "$wpa_vendor_ext_path/src_cli"
wpa_vendor_ext_inc_path = "$wpa_vendor_ext_path/include"
native_src_path = rebase_path("$wpa_vendor_ext_src_path")
enhanced_vendor_ext = false
if (wpa_supplicant_vendor_ext) {
  enhanced_vendor_ext = exec_script("$WPA_ROOT_DIR/script/check_path.py",
                                    [ "$native_src_path" ],
                                    "value")
}
print("vendor_ext =", enhanced_vendor_ext)
print("wpa_supplicant_vendor_ext =", wpa_supplicant_vendor_ext)

ext_cflags = []
wpa_vendor_ext_src = []
wpa_vendor_ext_src_cli = []

if (enhanced_vendor_ext) {
  wpa_vendor_ext_src = exec_script("$WPA_ROOT_DIR/script/get_files.py",
                                   [
                                     "$native_src_path",
                                     "c",
                                   ],
                                   "list lines")
  native_src_path = rebase_path("$wpa_vendor_ext_src_cli_path")
  wpa_vendor_ext_src_cli = exec_script("$WPA_ROOT_DIR/script/get_files.py",
                                       [
                                         "$native_src_path",
                                         "c",
                                       ],
                                       "list lines")
}

print(wpa_vendor_ext_src)
print(wpa_vendor_ext_src_cli)

if (wpa_supplicant_vendor_ext) {
  ext_cflags += [ "-DCONFIG_VENDOR_EXT" ]
}
