# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//third_party/wpa_supplicant/wpa_supplicant-2.9_standard/wpa.gni")

ext_cflags = []

if (wpa_supplicant_vendor_ext && wpa_vendor_gni != "") {
  import("${wpa_vendor_gni}")

  ext_cflags += [
    "-DCONFIG_HILINK_OKC_STA",
    "-DCONFIG_VENDOR_EXT",
  ]

  if (wpa_supplicant_wapi) {
    ext_cflags += [
      "-DCONFIG_WAPI",
      "-DLE",
    ]
  }
}
